--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "local-storage": "^2.0.0",
     "localstorage": "^1.0.1",
     "method-override": "^3.0.0",
