--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.37.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
@@ -33,12 +35,15 @@
     "local-storage": "^2.0.0",
     "localstorage": "^1.0.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.8.4",
+    "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
+    "qrcode-terminal": "^0.12.0",
     "to-ascii": "^0.1.0"
   },
   "devDependencies": {
